----------  JFREECHART 1.0.14 RELEASED ------------------------

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Translations provided by Petr Kopac:
    * org/jfree/chart/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/plot/LocalizationBundle_cs.properties: New file;
    * org/jfree/chart/editor/LocalizationBundle_cs.properties: New file;

2011-11-09  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3433405:
    * org/jfree/chart/renderer/category/LineRenderer3D.java
    (drawItem): Fixed eventually wrong item label position;

2011-11-01  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3432020:
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (clone): Remove duplicated lines.

2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/category/IntervalBarRenderer.java
    (drawInterval): Fix calculation of bar edge;
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fix calculation of bar edge;
    (drawVerticalItem): Likewise;
    
2011-10-30  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/StandardChartTheme.java
    (StandardChartTheme(String, boolean)): New method.

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 2810220:
    * org/jfree/chart/renderer/category/StatisticalBarRenderer.java
    (drawHorizontalItem): Fixed offset problem with maximalBarWidth,
    (drawVerticalItem): Likewise;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3428870:
    * org/jfree/chart/annotations/TextAnnotation.java
    (setRotationAnchor): Added missing argument check, Bug #3428870;

2011-10-28  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3429707:
    * org/jfree/chart/axis/LogAxis.java
    (refreshTicksHorizontal): Fixed endless loop for 0 TickUnit,
    (refreshTicksVertical): Likewise;

2011-10-19  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3072674: